src/objects/inscor__Company__c.object
<CustomObject>
    <fields>
        <fullName>inscor__AEX_Schedule__c</fullName>
        <label>AEX Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nightly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__AEX_Supplier_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AEX Supplier Code</label>
        <referenceTo>inscor__Manufacturer_Code__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Auto_Number__c</fullName>
        <defaultValue>10000</defaultValue>
        <label>Account# Auto Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Default_CQ_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Default CQ Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Default_Lease_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Default Lease Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Default_PO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Default PO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Default_RFQ_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Default RFQ Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Default_RO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Default RO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Default_SO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Default SO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Default_WO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Default WO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Unapproval_Schedule__c</fullName>
        <inlineHelpText>This setting is for the Account Approvals and determines how often the job runs to check for expirations.</inlineHelpText>
        <label>Account Unapproval Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nightly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Address_1__c</fullName>
        <label>Address 1</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Address_2__c</fullName>
        <label>Address 2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Admin_Email__c</fullName>
        <inlineHelpText>Recipient for System Alerts and Errors</inlineHelpText>
        <label>Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_SN_in_receiving_when_not_serialize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow SN in receiving when not serialize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Auto_Create_PNs_for_Data_Service_Quotes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create PNs for Data Service Quotes?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Bill_Core_Outright__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Non-Inventory Part Master to be used for defaulting when using the Exchange Bill Core Outright feature</inlineHelpText>
        <label>Bill Core/Outright</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Companies (Bill Core/Outright)</relationshipLabel>
        <relationshipName>Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Bill_Core_Repair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Non-Inventory Part Master to be used for defaulting when using the Exchange Bill Core Repair feature</inlineHelpText>
        <label>Bill Core Repair</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Cert_SITA_Wire_Code__c</fullName>
        <label>Cert SITA/Wire Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Cert_Status__c</fullName>
        <label>Cert Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type Certificate Holder</fullName>
                </value>
                <value>
                    <fullName>Production Certificate Holder</fullName>
                </value>
                <value>
                    <fullName>Supplemental Type Certificate Holder</fullName>
                </value>
                <value>
                    <fullName>Parts Manufacturing Authority</fullName>
                </value>
                <value>
                    <fullName>Technical Standard Order Holder</fullName>
                </value>
                <value>
                    <fullName>Manufactured to an established U.S. Specification</fullName>
                </value>
                <value>
                    <fullName>Repair Station (Domestic or Foreign)</fullName>
                </value>
                <value>
                    <fullName>U.S. Certificated Air Carrier</fullName>
                </value>
                <value>
                    <fullName>FAA Certificated Individual (State Type)</fullName>
                </value>
                <value>
                    <fullName>Foreign Certificated Air Carrier</fullName>
                </value>
                <value>
                    <fullName>Foreign Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Surplus Parts Supplier</fullName>
                </value>
                <value>
                    <fullName>New Parts Distributor</fullName>
                </value>
                <value>
                    <fullName>Parts Broker (New Used or Surplus Parts)</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Cleanup_Type__c</fullName>
        <label>TA Cleanup Setting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Don&apos;t delete anything</fullName>
                </value>
                <value>
                    <fullName>Only delete completed records</fullName>
                </value>
                <value>
                    <fullName>Delete all TA records older than X days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Company_CAGE_Code__c</fullName>
        <label>Company CAGE Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Contact_Email_for_TA_Archive_Files__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Email for TA Archive Files</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Account_360_Metric_Cache_Age__c</fullName>
        <label>Default Account 360 Metric Cache Age</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Accounts_Payable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Accounts Payable Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Accounts Payable Account)</relationshipLabel>
        <relationshipName>CompaniesuXIg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Accounts_Receivable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Accounts Receivable Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Adjustment_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Adjustment Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Adjustment Account)</relationshipLabel>
        <relationshipName>Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Consignor_Payable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Consignor Payable Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Consignor Payable Account)</relationshipLabel>
        <relationshipName>CompaniesdLek</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Exchange_Core_Repair_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Exchange Core Repair Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Exchange Core Repair Account)</relationshipLabel>
        <relationshipName>Companies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Expense_Account_Acq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Expense Account-Acq</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Expense Account-Acq)</relationshipLabel>
        <relationshipName>Companies3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Expense_Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Expense Account-Rep</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Expense Account-Rep)</relationshipLabel>
        <relationshipName>Companies4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Freight_Expense_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Freight Expense Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Freight Expense Account)</relationshipLabel>
        <relationshipName>Companies5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Inventory_Account_Acq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Inventory Account-Acq</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Inventory Account-Acq)</relationshipLabel>
        <relationshipName>Companies6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Inventory_Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Inventory Account-Rep</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Inventory Account-Rep)</relationshipLabel>
        <relationshipName>Companies7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_LOT_Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Fill in default condition code to be used for representative inventory line to carry the LOT cost.</inlineHelpText>
        <label>Default LOT Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_LOT_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Fill in default location to be used for representative inventory line to carry the LOT cost.</inlineHelpText>
        <label>Default LOT Location</label>
        <referenceTo>inscor__Inventory_Location__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_LOT_PN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Fill in default part number to be used for representative inventory line to carry the LOT cost.</inlineHelpText>
        <label>Default LOT PN</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.inscor__Non_Inventory_Item__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Companies (Default LOT PN)</relationshipLabel>
        <relationshipName>Companies3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_LOT_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Fill in default warehouse to be used for representative inventory line to carry the LOT cost.</inlineHelpText>
        <label>Default LOT Warehouse</label>
        <referenceTo>inscor__Warehouse__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Lease_COGS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Lease COGS Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Lease COGS Account)</relationshipLabel>
        <relationshipName>CompaniesYIRe</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Lease_Part_Writedown__c</fullName>
        <label>Default Lease Part Writedown %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Lease_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Lease Revenue Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Lease Revenue Account)</relationshipLabel>
        <relationshipName>CompaniesYIRU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Part_360_Metric_Cache_Age__c</fullName>
        <inlineHelpText>This is the default number of days that the part 360 metrics will use the cached data rather than recalculate. Note: This setting can have a major impact on performance and transaction counts</inlineHelpText>
        <label>Default Part 360 Metric Cache Age</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Revenue Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Revenue Account)</relationshipLabel>
        <relationshipName>Companies8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Unbilled_Expense_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Unbilled Expense Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Unbilled Expense Account)</relationshipLabel>
        <relationshipName>CompaniestUxF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Voucher_Variance_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Designate a GL Account to be used for variances during vouchering of Vendor Invoices</inlineHelpText>
        <label>Default Voucher Variance Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Voucher Variance Account)</relationshipLabel>
        <relationshipName>CompaniestRL5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Vouchers_Payable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Vouchers Payable Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (Default Vouchers Payable Account)</relationshipLabel>
        <relationshipName>Companies9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_WO_COGS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default WO COGS Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (WO COGS Account)</relationshipLabel>
        <relationshipName>CompaniesBJaw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_WO_Finished_Goods_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default WO Finished Goods Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (WO Finished Goods Account)</relationshipLabel>
        <relationshipName>CompaniesBJba</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_WO_Labor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default WO Labor Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (WO Labor Account)</relationshipLabel>
        <relationshipName>CompaniesBJbk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_WO_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default WO Revenue Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (WO Revenue Account)</relationshipLabel>
        <relationshipName>CompaniesBJam</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_WO_WIP_Labor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default WO WIP Labor Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (WO WIP Labor Account)</relationshipLabel>
        <relationshipName>CompaniesBJbG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_WO_WIP_Misc_Charge_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default WO WIP Misc Charge Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (WO WIP Misc Charge Account)</relationshipLabel>
        <relationshipName>CompaniesBJbQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Default_WO_WIP_Parts_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default WO WIP Parts Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Companies (WO WIP Parts Account)</relationshipLabel>
        <relationshipName>CompaniesBJb6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__EASA_Num__c</fullName>
        <label>EASA #</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Early_Delivery_Threshold__c</fullName>
        <label>Early Delivery Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Enable_Autoprice_Flow_for_CQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Autoprice Flow for CQ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Enable_Autoprice_Flow_for_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Autoprice Flow for PO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Enable_Early_Delivery_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Early Delivery Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Part_Writedown__c</fullName>
        <label>Exchange Part Writedown %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Export_Control_Logic__c</fullName>
        <label>Export Control Logic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All True</fullName>
                </value>
                <value>
                    <fullName>Any True</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__FAA_CRS__c</fullName>
        <inlineHelpText>Used for creation of 8130-3 in WO module.</inlineHelpText>
        <label>FAA CRS#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__FO_Address1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Address1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__FO_Address2__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Address2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__FO_City__c</fullName>
        <defaultValue>true</defaultValue>
        <label>City</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__FO_Company_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Company Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__FO_Country__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__FO_Fax__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__FO_Logo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__FO_Phone__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__FO_State__c</fullName>
        <defaultValue>true</defaultValue>
        <label>State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__FO_Website__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__FO_Zip_Code__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Zip Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>inscor__Govgistics_Default_Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Govgistics Default Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Companies (Govgistics Default Condition Code)</relationshipLabel>
        <relationshipName>Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Govgistics_Frequency__c</fullName>
        <label>Govgistics Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Header_Font_Color__c</fullName>
        <inlineHelpText>Use &apos;White&apos; or &apos;Black&apos; to contrast Header Color or hex code will also be accepted.</inlineHelpText>
        <label>Header Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__ILS_Client_ID__c</fullName>
        <label>ILS Client ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__ILS_Include_Alternates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ILS - Include Alternates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__ILS_RFQ_Pull_Schedule__c</fullName>
        <label>ILS RFQ Pull Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Every 15 Min</fullName>
                </value>
                <value>
                    <fullName>Every Half Hour</fullName>
                </value>
                <value>
                    <fullName>Every Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__ILS_Schedule__c</fullName>
        <label>ILS Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nightly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Include_Secondary_in_PR_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Secondary in PR Summary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Auto_Send_Time__c</fullName>
        <inlineHelpText>Set the time for the invoices to be sent out</inlineHelpText>
        <label>Invoice Auto Send Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>inscor__Issue_Part_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue Part Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Late_Delivery_Threshold__c</fullName>
        <label>Late Delivery Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Load_Open_Manifests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load Open Manifests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Load_Open_POs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load Open PO&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Load_Open_ROs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load Open RO&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Load_on_Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load on Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Logo__c</fullName>
        <label>Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Max_of_Metrics_calculated_per_day__c</fullName>
        <inlineHelpText>This setting limits the number of metrics calculated each time the process runs. The oldest metrics will run first.</inlineHelpText>
        <label>Max # of Metrics calculated per day</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Nightly_Data_Load__c</fullName>
        <label>Nightly Data Load</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ILS_Automatic</fullName>
                    <label>ILS-Automatic</label>
                </value>
                <value>
                    <fullName>ILS_Manual</fullName>
                    <label>ILS-Manual</label>
                </value>
                <value>
                    <fullName>Partsbase-Manual</fullName>
                </value>
                <value>
                    <fullName>Partsbase-Automatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Number_of_days__c</fullName>
        <label>When Deleting, Always Keep Last X Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__PN_Default_CQ_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Default CQ Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__PN_Default_Lease_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Default Lease Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__PN_Default_PO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Default PO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__PN_Default_RFQ_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Default RFQ Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__PN_Default_RO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Default RO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__PN_Default_SO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Default SO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__PN_Default_WO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Default WO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Part_360_Calculation_Process_Frequency__c</fullName>
        <inlineHelpText>This setting (in days) determines how often the Part360 metrics are calculated.</inlineHelpText>
        <label>Part 360 Calculation Process Frequency</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>